# terma

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  TODO.md  package-lock.json  package.json  test_client.sh  wrangler.jsonc
.github/workflows/: release.yml
client/: Cargo.toml  build.rs
client/src/: app.rs  clipboard.rs  config.rs  connection.rs  events.rs  main.rs  notifications.rs  ui.rs
cloudflare/worker/: package-lock.json  package.json
cloudflare/worker/src/: index.ts
server/: Cargo.toml
server/migrations/: 20250101000000_create_rooms.sql  20250102000000_create_messages.sql  20250103000000_fix_message_trigger.sql
server/src/: db.rs  main.rs  state.rs  ws.rs
server/src/handlers/: download.rs  install.rs  mod.rs  rooms.rs  web.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  protocol.rs
