[workspace]
resolver = "2"
members = ["server", "client", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matt"]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
