[package]
name = "terma-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
terma-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures = "0.3"
chrono = "0.4"
uuid = "1.11"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "4.11"

[[bin]]
name = "terma"
path = "src/main.rs"
