[package]
name = "terma-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
terma-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
nanoid = "0.4"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[[bin]]
name = "terma-server"
path = "src/main.rs"
